--- a/app/views/presentation/_slides.haml
+++ b/app/views/presentation/_slides.haml
@@ -1,7 +1,5 @@
 .slide
   %h1 Being nice with Rack::Cache
-  %h3 Иван Осадчий
-  %h4 ICS
 
 
 .slide
@@ -23,4 +21,141 @@
 
   %p
     %em отношение выгода / сложность для HTTP кэша весьма велико
+
+
+.slide
+  %h1 Короче, Склифосовский
+
+  :markdown
+        class TestController < ApplicationController
+          def show
+            seed = Time.now.to_i / 10
+            srand(seed)
+
+            if stale? :etag => seed
+              expires_in 10.seconds, :public => true
+              render :text => Faker::Lorem.paragraphs(500)
+            end
+          end
+        end
+
+  :markdown
+        # Gemfile
+        gem 'rack-cache'
+
+
+.slide
+  %h1 Работает!
+  :markdown
+        > find tmp/cache -type f
+
+        tmp/cache/BB4/EF0/http%3A%2F%2Flocalhost%3A3000%2Ftest%3F
+        tmp/cache/ABE/580/43374e3d3365b9c26451d581ce220da9cdd0eb67
+
+  %p= image_tag "itworks.jpg"
+
+
+
+.slide
+  %h1 Работает! Но...
+
+  :markdown
+        > rake middleware RAILS_ENV=production
+
+        use Rack::Cache
+        use Rack::Lock
+        use #<ActiveSupport::Cache::Strategy::LocalCache::Middleware:0xb6ad4970>
+        use Rack::Runtime
+        use Rack::MethodOverride
+        use Rails::Rack::Logger
+        use ActionDispatch::ShowExceptions
+        use ActionDispatch::RemoteIp
+        use Rack::Sendfile
+        use ActionDispatch::Callbacks
+        use ActiveRecord::ConnectionAdapters::ConnectionManagement
+        use ActiveRecord::QueryCache
+        use ActionDispatch::Cookies
+        use ActionDispatch::Session::CookieStore
+        use ActionDispatch::Flash
+        use ActionDispatch::ParamsParser
+        use ActionDispatch::Head
+        use Rack::ConditionalGet
+        use Rack::ETag
+        use ActionDispatch::BestStandardsSupport
+        run RackCacheTest::Application.routes
+
+
+.slide
+  :markdown
+    # Забудем про Rack::Cache
+
+        class AssetsController < ApplicationController
+          def serve
+            path = ... # хитрый код
+
+            if stale? :last_modified => File.mtime(path), :public => true
+              expires_in 1.year
+              send_file path, :type => File.mime_type(path),
+                              :disposition => 'inline'
+            end
+          end
+        end
+
+    * без rack-cache файл отдается nginx'ом (X-Accel-Redirect)
+
+
+.slide
+  :markdown
+    # Rack::Cache начитает нам мешать
+
+    * используется в 2 раза больше места на диске
+    * файл отдается рельсами
+
+          # lib/rack/cache/metastore.rb
+          File.open(path, 'rb') { |io| Marshal.load(io) }
+
+    * а нам это категорически не нравится
+
+
+.slide
+  :markdown
+    # Поддержка Rack::Sendfile
+
+    * `#to_path` - алиас для `File#path`
+    * Rack::Cache должен подключаться после Rack::Sendfile
+
+          # config/enviroments/production.rb
+          config.middleware.delete(Rack::Cache)
+          config.middleware.insert_after Rack::Sendfile, Rack::Cache
+
+
+.slide
+  :markdown
+    # Поддержка Rack::Sendfile
+
+        > rake middleware RAILS_ENV=production
+
+        use ActionDispatch::Static
+        use Rack::Lock
+        use #<ActiveSupport::Cache::Strategy::LocalCache::Middleware:0xb6d618b4>
+        use Rack::Runtime
+        use Rack::MethodOverride
+        use Rails::Rack::Logger
+        use ActionDispatch::ShowExceptions
+        use ActionDispatch::RemoteIp
+        use Rack::Sendfile
+        use Rack::Cache
+        use ActionDispatch::Reloader
+        use ActionDispatch::Callbacks
+        use ActiveRecord::ConnectionAdapters::ConnectionManagement
+        use ActiveRecord::QueryCache
+        use ActionDispatch::Cookies
+        use ActionDispatch::Session::CookieStore
+        use ActionDispatch::Flash
+        use ActionDispatch::ParamsParser
+        use ActionDispatch::Head
+        use Rack::ConditionalGet
+        use Rack::ETag
+        use ActionDispatch::BestStandardsSupport
+        run RackCacheTest::Application.routes
 
