--- a/app/views/presentation/_slides.haml
+++ b/app/views/presentation/_slides.haml
@@ -106,7 +106,7 @@
 
 .slide
   :markdown
-    # Rack::Cache начитает нам мешать
+    # Rack::Cache начинает нам мешать
 
     * используется в 2 раза больше места на диске
     * файл отдается рельсами
