--- a/app/views/presentation/_slides.haml
+++ b/app/views/presentation/_slides.haml
@@ -5,7 +5,7 @@
 .slide
   %h1 HTTP кэширование: когда это нужно
 
-  %ul.incremental
+  %ul
     %li slashdot
     %li load times
     %li счет за трафик
@@ -158,4 +158,66 @@
         use Rack::ETag
         use ActionDispatch::BestStandardsSupport
         run RackCacheTest::Application.routes
+
+
+.slide
+  :markdown
+    # Тесты
+
+    * фокус не удался :)
+    * при `ab -с 1000 -n 5000` не падает
+    * все упирается в ширину канала тестирующей машины
+
+
+.slide
+  :markdown
+    # Slashdot-эффект
+
+    ## Признаки
+
+    * куча хитов по очень малому числу урлов
+    * небольшая длина сессии
+    * критично всех обслужить и не упасть
+
+
+.slide
+  :markdown
+    # Slashdot-эффект
+
+    ## Спасаться будем так
+
+        expires_in 10.seconds, :public => true
+
+    * предсказуемая нагрузка на рельсы и базу
+    * практически незаметно для пользователя
+
+
+.slide
+  :markdown
+    # Не все так замечательно (опять!)
+
+    * злые браузеры не хотят хранить устаревший контент
+    * счет за трафик увеличивается
+    * время отклика растёт
+
+
+.slide
+  :markdown
+    # Чего мы вообще хотим
+
+    * разрешить браузеру решать, сколько хранить страницу
+    * заставить прокси валидировать контент
+
+
+.slide
+  :markdown
+    # Как бы это сделать
+
+    Упс... HTTP об этом уже позаботился
+
+        Cache-Control: s-maxage=10, public
+
+    В терминах рельсов:
+
+        expires_in nil, 's-maxage' => 10.seconds,  :public => true
 
