--- a/app/views/presentation/show.haml
+++ b/app/views/presentation/show.haml
@@ -8,7 +8,7 @@
     %meta{:name => "presdate", :content => "20110707"}
     %meta{:name => "author", :content => "Ivan Osadchii"}
     %meta{:name => "company", :content => "ICS"}
-    %meta{:name => "defaultView", :content => "outline"}
+    %meta{:name => "defaultView", :content => "slideshow"}
     %meta{:name => "controlVis", :content => "hidden"}
 
     :plain
