--- a/app/views/presentation/_slides.haml
+++ b/app/views/presentation/_slides.haml
@@ -267,5 +267,12 @@
 
 
 .slide
+  :markdown
+
+    * #{link_to "http://rack-cache-test.heroku.com/", "http://rack-cache-test.heroku.com/"}
+    * #{link_to "https://github.com/tepoga/rack-cache-test", "https://github.com/tepoga/rack-cache-test"}
+
+
+.slide
 
   %p{:style => "margin: 24% 0; text-align: center"} Спасибо
